fixed invisible image width

--- a/style.css
+++ b/style.css
@@ -54,17 +54,6 @@ table {
   height: 100vh;
   position: relative;
 }
-/*.overlay:before{
-  position: absolute;
-  content:" ";
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  display: block;
-  background-color: rgba(125, 202, 92, 0.5);
-  z-index: 99;
-}*/
 /*FIRST SECTION*/
 .intro {
   /*background-image: url('downtown.jpg');*/
@@ -141,12 +130,7 @@ table {
 	margin: 0 auto;
 	display: block;
 }
-/*.l2 {
-  color: #FFF;
-  padding-top: 5%;
-  text-align: center;
-  font-size: 10em;
-}*/
+
 
 /*SECOND SLIDE*/
 .NEW-BACKGROUND {
@@ -157,7 +141,7 @@ table {
   font-family: 'Raleway', sans-serif;
   height: 20vh;
   color: #FFF;
-  margin: auto 10%;
+  /*margin: auto 10%;*/
 	z-index: 99;
 }
 .future {
@@ -172,7 +156,6 @@ table {
 	height: 100vh;
 	text-align: center;
 	font-family: 'Fjalla One', sans-serif;
-  height: 100vh;
   position: relative;
 }
 .slide-3-left {
@@ -181,37 +164,26 @@ table {
 	color: #000;
   font-size: 2em;
   line-height: 2;
-  margin: 5%;
-	margin-left: 10%;
-  padding: 2%;
+	margin: 10% auto auto 10%;
+  padding: 2% 0;
   float: left;
-  width: 25%;
+  width: 40%;
 }
 .slide-3-right {
-	/*border: 1px solid black;*/
-	float: left;
-  width: 55%;
+	float: right;
+  width: 40%;
 }
 .slide-3-right img {
-	margin: 8% auto;
-	padding: 2px;
+	margin-top: 10%;
 	text-align: center;
 }
-/*.influencer img {
-	margin: 20%
-	padding: 2px;
-	text-align: center;
-	background: rgba(125, 202, 92, 0.6);
-	border-radius: 50px;
-	float: right;
-	width: 10%;
-}*/
+
 .slide-4 {
   background-color: rgba(125, 202, 92, 0.6);
   font-family: 'Raleway', sans-serif;
   height: 20vh;
   color: #999;
-  position: relativ;
+  position: relative;
   width: 100%;
 }
 .line {
@@ -220,10 +192,10 @@ table {
 .last-line {
   border-top: 1px solid #FFF;
   color: #FFF;
-  margin: 0 10%;
+
   padding: 1%;
   position: relative;
-  /*text-align: left;*/
+
 }
 .app-store-2 {
   border: 1px solid #FFF;
@@ -233,111 +205,3 @@ table {
   margin-left: 1%;
   padding: 1%;
 }
-
-/*.explaination-l2 {
-  font-size: 3em;
-  margin-top: -4%;
-  text-align: right;
-}*/
-/*SECOND SLIDE*/
-
-/*.definition-section {
-  float: left;
-}*/
-/*.definition {
-  border: 8px dotted black;
-  float: left;
-  font-size: 2em;
-  line-height: 1.5;
-  padding: 3%;
-  width: 375px;
-}*/
-/*.follow-up {
-  border: 8px solid black;
-  background: #000;
-  color: white;
-  font-size: 1.5em;
-  line-height: 1.5;
-  padding: 3%;
-  width: 375px;
-}
-.influencer {
-  margin-top: 4%;
-  margin-right: 15%;
-  float: right;
-  width: 300px;
-}
-.influencer img {
-  width: 600px;
-}
-.slide-3 {
-  margin-top: 20%;
-}
-.phone img {
-  float: left;
-  width: 300px;
-}
-.how-it-works {
-  margin-left: 20px;
-}
-.title {
-  font-size: 2em;
-}
-.pointer {
-    width: 500px;
-    height: 100px;
-    position: relative;
-    background: lightgray;
-    float: left;
-    margin-bottom: 2%;
-  }
-  .pointer:after {
-    content: "";
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    border-right: 50px solid white;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent;
-  }
-  .pointer:before {
-    content: "";
-    position: absolute;
-    left: -50px;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    border-right: 50px solid lightgray;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent;
-  }
-.pointer p{
-  font-size: 1.25em;
-  margin-left: 3%;
-  width: 400px;
-}*/
-
-/*.pointer {
-  margin-left: 3%;
-  padding: 3%;
-  text-align: left;
-  width: 400px;
-}*/
-/*.pointer-1l p{
-  padding: 4%;
-}
-.pointer-2l p {
-  padding: 3%;
-}*/
-/*.pointer-3l p {
-  padding-bottom: 3%;
-}*/
-/*.slide-4 img {
-  text-align: center;
-}
-.slide-4 img{
-  margin: 40%;
-  width: 200px;
-}*/
